minor changes to pacify spotBugs